<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/labelWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20px"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/option_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20px"
        android:layout_marginTop="20px" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btnLucky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/luck" />

            <ImageButton
                android:id="@+id/btnClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user" />

            <ImageButton
                android:id="@+id/btnServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/server" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/labelOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/option1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="visible" />

            <TextView
                android:id="@+id/labelOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/option2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/labelOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/option3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/edtIP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="127.0.0.1"
        android:visibility="gone" android:digits="1234567890." android:inputType="phone">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/go" />

</LinearLayout>